--- a/newfile.html
+++ b/newfile.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 	<head>
 		<meta charset="UTF-8">
 		<title>Title</title>
 	</head>
 	<body>
-		<h1>Dự án 3</h1>
-		<h2>Sửa đổi lần 1</h2>
-		<h2>Sửa đổi lần 2</h2>
+	
 	</body>
 </html>
